添加温馨提示

--- a/packages/ui-default/templates/record_main.html
+++ b/packages/ui-default/templates/record_main.html
@@ -8,6 +8,14 @@
 {{ set(UiContext, 'rids', rdocs.map(eval("rdoc=>rdoc._id.toString()"))) }}
 <div class="row">
   <div class="medium-12 columns">
+    <div class="section">
+      <div class="section__header">
+        <h1 class="section__title" style="color: red;">温馨提示</h1>
+      </div>
+      <div class="section__body">
+        <span>由于OJ正在开发中，评测性能可能受影响，若出现超时请尝试再次提交</span>
+      </div>
+    </div>
     <form method="get">
       <div class="section">
         <div class="section__header">
