--- a/packages/ui-default/templates/partials/footer.html
+++ b/packages/ui-default/templates/partials/footer.html
@@ -75,11 +75,11 @@
             <li class="footer__extra-link-item">{{ html|safe }}</li>
           {%- endfor -%}
           <li class="footer__extra-link-item">Powered by <a href="https://hydro.js.org">Hydro v{{ global.Hydro.version.hydrooj }}</a></li>
-          {% if model.system.get('server.pro') %}
+          <!-- {% if model.system.get('server.pro') %}
             <li class="footer__extra-link-item">Professional Version</li>
           {% else %}
             <li class="footer__extra-link-item">Community Version</li>
-          {% endif %}
+          {% endif %} -->
         </ol>
       </div>
     </div>
