--- a/packages/ui-default/templates/user_register_with_code.html
+++ b/packages/ui-default/templates/user_register_with_code.html
@@ -1,5 +1,3 @@
-{% block title %}{{ _('Sign Up') }}
-{% endblock %}
 {% extends "layout/immersive.html" %}
 {% block content %}
   <div class="immersive--content immersive--center">
@@ -13,14 +11,20 @@
       </div>
       <div>
         <label class="inverse material textbox">
-          {{ _('StuNumber') }}
+          {{ _('Stu_RealName') }}
+          <input name="stuname" type="text" autofocus>
+        </label>
+      </div>
+      <div>
+        <label class="inverse material textbox">
+          {{ _('Stu_ID') }}
           <input name="stunum" type="text" autofocus>
         </label>
       </div>
       <div>
         <label class="inverse material textbox">
-          {{ _('ClassName') }}
-          <input name="stunum" type="text" autofocus>
+          {{ _('Stu_ClassName') }}
+          <input name="stuclass" type="text" autofocus>
         </label>
       </div>
       <div>
