补交一些文件

--- a/packages/ui-default/templates/user_register_with_code.html
+++ b/packages/ui-default/templates/user_register_with_code.html
@@ -18,7 +18,7 @@
       <div>
         <label class="inverse material textbox">
           {{ _('Stu_ID') }}
-          <input name="stunum" type="text" autofocus>
+          <input name="stuid" type="text" autofocus>
         </label>
       </div>
       <div>
