--- a/packages/ui-default/templates/partials/nav.html
+++ b/packages/ui-default/templates/partials/nav.html
@@ -29,7 +29,7 @@
           <li class="nav__list-item">
             <a href="{{ url('user_register') }}" class="nav__item--round">{{ _('Sign Up') }}</a>
           </li>
-        {% else %}
+          {# {% else %} #}
           <li class="nav__list-item" data-dropdown-pos="bottom right" data-dropdown-target="#menu-nav-user" data-dropdown-trigger-desktop-only>
             <a href="{{ url('user_detail', uid=handler.user._id) }}" class="nav__item">{{ handler.user.uname }}
               <span class="icon icon-expand_more nojs--hide"></span></a>
