--- a/packages/ui-default/templates/user_detail.html
+++ b/packages/ui-default/templates/user_detail.html
@@ -2,6 +2,7 @@
 {% extends "layout/basic.html" %}
 {% block content %}
   {{ set(UiContext, 'udoc', udoc) }}
+  {{ set(UiContext, 'studoc', studoc) }}
   <style>
     .user-profile-bg {
       background-image: url("{{ udoc.backgroundImage }}");
@@ -19,19 +20,32 @@
               <div class="media__body profile-header__main">
                 <h1>
                   {{ udoc['uname'] }}
-                  <small>({{ _('UID') }}: {{ udoc['_id'] }})</small>
+                  <small>({{ _('UID') }}：{{ udoc['_id'] }})</small>
                 </h1>
-                <p>
-                  <span>
-                    {{ _('Stu_RealName') }}:
-                  </span>
-                  <span>
-                    {{ _('Stu_ID') }}:
-                  </span>
-                  <span>
-                    {{ _('Stu_ClassName') }}:
-                  </span>
-                </p>
+                {% if sdoc and studoc %}
+                  <p>
+                    <p>
+                      <span>
+                        {{ _('Stu_RealName') }}：
+                    </span>
+                      <span>
+                        {{studoc['name']}}
+                      </span>
+                    </p>
+                    {% if isSelfProfile %}
+                      <p>
+                        <span>
+                          {{ _('Stu_ID') }}：{{studoc['stuid']}}
+                        </span>
+                      </p>
+                    {% endif %}
+                    <p>
+                      <span>
+                        {{ _('Stu_ClassName') }}：{{studoc['class']}}
+                      </span>
+                    </p>
+                  </p>
+                {% endif %}
                 <p>
                   {{ _('Registered at') }}
                   {{ datetimeSpan(udoc['regat'])|safe }},
