--- a/packages/ui-default/templates/problem_main.html
+++ b/packages/ui-default/templates/problem_main.html
@@ -25,7 +25,9 @@
       </div>
     </div>
     <div class="medium-3 columns">
-      {% if handler.user.hasPerm(perm.PERM_EDIT_PROBLEM) %}
+      {% if handler
+        .user
+        .hasPerm(perm.PERM_EDIT_PROBLEM) %}
         <div class="section side">
           <ol class="menu">
             <a href="javascript:;" class="menu__link edit-mode-hide" name="enter-edit-mode">
@@ -57,7 +59,9 @@
           </ol>
         </div>
       {% endif %}
-      {% if handler.user.hasPerm(perm.PERM_CREATE_PROBLEM) %}
+      {% if handler
+        .user
+        .hasPerm(perm.PERM_CREATE_PROBLEM) %}
         <div class="section side">
           <div class="section__header">
             <h1 class="section__title">{{ _('Create Problem') }}</h1>
