--- a/packages/ui-default/templates/main.html
+++ b/packages/ui-default/templates/main.html
@@ -3,83 +3,110 @@
 {% extends "layout/basic.html" %}
 {% import "components/contest.html" as contest with context %}
 {% block content %}
-<div class="row">
-  <div class="large-9 columns">
-    {% if domain['bulletin'] %}
-      <div class="section">
-        <div class="section__body typo">
-          {{ domain['bulletin']|markdown|safe }}
-        </div>
-      </div>
-    {% endif %}
-    {% for node in contents %}
-      {% if node[0] == 'contest' %}
-        {% set tdocs = node[1] %}
-        {% set tsdict = node[2] %}
-        {% include "partials/homepage/contest.html" %}
-      {% elif node[0] == 'homework' %}
-        {% set htdocs = node[1] %}
-        {% set htsdict = node[2] %}
-        {% include "partials/homepage/homework.html" %}
-      {% elif node[0] == 'training' %}
-        {% set tdocs = node[1] %}
-        {% set tsdict = node[2] %}
-        {% include "partials/homepage/training.html" %}
-      {% elif node[0] == 'ranking' %}
-        {% set uids = node[1] %}
-        {% include "partials/homepage/ranking.html" %}
-      {% elif node[0] == 'discussion' %}
-        {% set ddocs = node[1] %}
-        {% set vndict = node[2] %}
-        {% if ddocs.length %}
-          <div class="section page--discussion_main">
-            <div class="section__header">
-              <h1 class="section__title">{{ _('Discussion') }}</h1>
-            </div>
-            {% include "partials/discussion_list.html" %}
+  <div class="row">
+    <div class="large-9 columns">
+      {% if domain['bulletin'] %}
+        <div class="section">
+          <div class="section__body typo">
+            {{ domain['bulletin']|markdown|safe }}
           </div>
-        {% endif %}
+        </div>
       {% endif %}
-    {% endfor %}
-  </div>
-  <div class="large-3 columns">
-    <div class="section side nojs--hide">
-      <div class="section__header">
-        <h1 class="section__title">{{ _('Hitokoto') }}</h1>
-      </div>
-      <div class="section__body typo" name="hitokoto"></div>
+      {% for node in contents %}
+        {% if node[0] == 'contest' %}
+          {% set tdocs = node[1] %}
+          {% set tsdict = node[2] %}
+          {% include "partials/homepage/contest.html" %}
+        {% elif node[0] == 'homework' %}
+          {% set htdocs = node[1] %}
+          {% set htsdict = node[2] %}
+          {% include "partials/homepage/homework.html" %}
+        {% elif node[0] == 'training' %}
+          {% set tdocs = node[1] %}
+          {% set tsdict = node[2] %}
+          {% include "partials/homepage/training.html" %}
+        {% elif node[0] == 'ranking' %}
+          {% set uids = node[1] %}
+          {% include "partials/homepage/ranking.html" %}
+        {% elif node[0] == 'discussion' %}
+          {% set ddocs = node[1] %}
+          {% set vndict = node[2] %}
+          {% if ddocs.length %}
+            <div class="section page--discussion_main">
+              <div class="section__header">
+                <h1 class="section__title">{{ _('Discussion') }}</h1>
+              </div>
+              {% include "partials/discussion_list.html" %}
+            </div>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
     </div>
-    {% if handler.user.hasPerm(perm.PERM_VIEW_DISCUSSION) %}
-      {% include 'partials/discussion_nodes_widget.html' %}
-    {% endif %}
-    <div class="section side">
-      <div class="section__header">
-        <h1 class="section__title">{{ _('Recommended') }}</h1>
+    <div class="large-3 columns">
+      <div class="section side nojs--hide">
+        <div class="section__header">
+          <h1 class="section__title">{{ _('Hitokoto') }}</h1>
+        </div>
+        <div class="section__body typo" name="hitokoto"></div>
       </div>
-      <div class="section__body"><ul class="group-list">
-        <li class="group-list__item">
-          <h2 class="section__title">{{ _('Chinese') }}</h2>
-          <ol class="chip-list">
-            <li class="chip-list__item"><a class="typo-a" href="https://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184+sp/about" target="_blank">清华数据结构 MOOC 上</a><a class="typo-a" href="https://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184_2X+sp/about" target="_blank">/下</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://www.51nod.com/" target="_blank">51Nod</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://www.luogu.com.cn/" target="_blank">洛谷</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://www.rqnoj.cn/" target="_blank">RQNOJ</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://zoj.pintia.cn/" target="_blank">ZOJ</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://uoj.ac/" target="_blank">UOJ</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://loj.ac/" target="_blank">LibreOJ</a></li>
-          </ol>
-        </li>
-        <li class="group-list__item">
-          <h2 class="section__title">{{ _('English') }}</h2>
-          <ol class="chip-list">
-            <li class="chip-list__item"><a class="typo-a" href="https://acm.njupt.edu.cn/" target="_blank">NOJ</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://www.topcoder.com/" target="_blank">TopCoder</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://uva.onlinejudge.org/" target="_blank">UVa</a></li>
-            <li class="chip-list__item"><a class="typo-a" href="https://codeforces.com/" target="_blank">Codeforces</a></li>
-          </ol>
-        </li>
-      </ul></div>
+      {# {% if handler
+        .user
+        .hasPerm(perm.PERM_VIEW_DISCUSSION) %}
+        {% include 'partials/discussion_nodes_widget.html' %}
+      {% endif %} #}
+      {# <div class="section side">
+        <div class="section__header">
+          <h1 class="section__title">{{ _('Recommended') }}</h1>
+        </div>
+        <div class="section__body">
+          <ul class="group-list">
+             <li class="group-list__item">
+              <h2 class="section__title">{{ _('Chinese') }}</h2>
+              <ol class="chip-list">
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184+sp/about" target="_blank">清华数据结构 MOOC 上</a>
+                  <a class="typo-a" href="https://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184_2X+sp/about" target="_blank">/下</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://www.51nod.com/" target="_blank">51Nod</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://www.luogu.com.cn/" target="_blank">洛谷</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://www.rqnoj.cn/" target="_blank">RQNOJ</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://zoj.pintia.cn/" target="_blank">ZOJ</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://uoj.ac/" target="_blank">UOJ</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://loj.ac/" target="_blank">LibreOJ</a>
+                </li>
+              </ol>
+            </li>
+            {# <li class="group-list__item">
+              <h2 class="section__title">{{ _('English') }}</h2>
+              <ol class="chip-list">
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://acm.njupt.edu.cn/" target="_blank">NOJ</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://www.topcoder.com/" target="_blank">TopCoder</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://uva.onlinejudge.org/" target="_blank">UVa</a>
+                </li>
+                <li class="chip-list__item">
+                  <a class="typo-a" href="https://codeforces.com/" target="_blank">Codeforces</a>
+                </li>
+              </ol>
+            </li>
+          </ul>
+        </div>
+      </div> #}
     </div>
   </div>
-</div>
 {% endblock %}
