--- a/packages/ui-default/common/variables.inc.styl
+++ b/packages/ui-default/common/variables.inc.styl
@@ -43,7 +43,8 @@ $font-size-title = 20px
 $section-gap-v = 25px
 $section-gap-h = $grid-padding
 $section-margin = 30px
-$section-shadow = rem(0 6px 22px) rgba(#AFC2C9, 0.5)
+// $section-shadow = rem(0 6px 22px) rgba(#AFC2C9, 0.5)
+$section-shadow = none
 $section-bg-color = $content-bg-color
 $section-title-color = $header-2-color
 $section-toolbtn-color = #AAA
