--- a/packages/ui-default/templates/record_main_tr.html
+++ b/packages/ui-default/templates/record_main_tr.html
@@ -3,21 +3,24 @@
 <tr data-rid="{{ rdoc['_id'] }}">
   {{ record.render_status_td(rdoc) }}
   <td class="col--problem col--problem-name">
-  {% if handler.user.hasPerm(perm.PERM_REJUDGE) %}
-    <form class="form--inline" method="post" action="{{ url('record_detail', rid=rdoc._id) }}">
-      <input type="hidden" name="operation" value="rejudge">
-      <input type="hidden" name="csrfToken" value="{{ handler.csrfToken }}">
-      <button type="submit" class="link text-maroon lighter">
-        <span class="icon icon-refresh"></span>
-        {{ _('Rejudge') }}
-      </button> |
+    {% if handler
+      .user
+      .hasPerm(perm.PERM_REJUDGE) %}
+      <form class="form--inline" method="post" action="{{ url('record_detail', rid=rdoc._id) }}" target="no_redirect">
+        <input type="hidden" name="operation" value="rejudge">
+        <input type="hidden" name="csrfToken" value="{{ handler.csrfToken }}">
+        <button type="submit" class="link text-maroon lighter">
+          <span class="icon icon-refresh"></span>
+          {{ _('Rejudge') }}
+        </button> |
     </form>
-  {% endif %}
-  {% if pdoc and rdoc.contest %}
-    {{ problem.render_problem_title(pdoc, tdoc=tdoc, show_tags=false, show_invisible_flag=false) }}
-  {% elif pdoc and (not pdoc.hidden or handler.user.hasPerm(perm.PERM_VIEW_PROBLEM_HIDDEN) or handler.user.own(pdoc)) %}
-    {{ problem.render_problem_title(pdoc, show_tags=false) }}
-  {% else %}
+      <iframe name="no_redirect" style="display:none;"></iframe>
+    {% endif %}
+    {% if pdoc and rdoc.contest %}
+      {{ problem.render_problem_title(pdoc, tdoc=tdoc, show_tags=false, show_invisible_flag=false) }}
+    {% elif pdoc and(not pdoc.hidden or handler.user.hasPerm(perm.PERM_VIEW_PROBLEM_HIDDEN)or handler.user.own(pdoc)) %}
+      {{ problem.render_problem_title(pdoc, show_tags=false) }}
+    {% else %}
     *
   {% endif %}
   </td>
@@ -30,8 +33,10 @@
       {% endif %}
     </a>
   </td>
-  <td class="col--time">{% if rdoc['status'] == STATUS.STATUS_TIME_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_MEMORY_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_OUTPUT_LIMIT_EXCEEDED %}&ge;{% endif %}{{ rdoc.time|round|int }}ms</td>
-  <td class="col--memory">{% if rdoc['status'] == STATUS.STATUS_TIME_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_MEMORY_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_OUTPUT_LIMIT_EXCEEDED %}&ge;{% endif %}{{ size(rdoc.memory, 1024) }}</td>
+  <td class="col--time">
+    {% if rdoc['status'] == STATUS.STATUS_TIME_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_MEMORY_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_OUTPUT_LIMIT_EXCEEDED %}&ge;{% endif %}{{ rdoc.time|round|int }}ms</td>
+  <td class="col--memory">
+    {% if rdoc['status'] == STATUS.STATUS_TIME_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_MEMORY_LIMIT_EXCEEDED or rdoc['status'] == STATUS.STATUS_OUTPUT_LIMIT_EXCEEDED %}&ge;{% endif %}{{ size(rdoc.memory, 1024) }}</td>
   <td class="col--lang">{{ model.setting.langs[rdoc['lang']].display }}</td>
   <td class="col--submit-at">{{ datetimeSpan(rdoc['_id'])|safe }}</td>
 </tr>
