--- a/packages/ui-default/misc/immersive.styl
+++ b/packages/ui-default/misc/immersive.styl
@@ -14,10 +14,10 @@
 
 +above(rupture.mobile-cutoff)
   .immersive--center
-    width: 230px
+    width: 400px
     margin: 0 auto
 
 .immersive--center
   h1
     text-align: center
-    margin: 2em 0
+    margin: .5em 0
