--- a/packages/ui-default/templates/user_register_with_code.html
+++ b/packages/ui-default/templates/user_register_with_code.html
@@ -2,6 +2,7 @@
 {% block content %}
   <div class="immersive--content immersive--center">
     <h1>{{ _('Sign Up') }}</h1>
+    <blockquote class="note">{{_('reg_stuwarn')}}</blockquote>
     <form method="POST">
       <div>
         <label class="inverse material textbox">
