用户名显示改为学生信息 解决一些bug

--- a/packages/ui-default/misc/typography.styl
+++ b/packages/ui-default/misc/typography.styl
@@ -458,3 +458,10 @@ h1, h2, h3, h4, h5, h6
 
 textarea
   font-family: Consolas, monospace !important
+
+// HGNUOJ Added
+.text-badge
+  display: inline-block
+  padding: 0 5px 0 5px
+  background-color: purple
+  color: white
