--- a/packages/ui-default/pages/ranking.page.styl
+++ b/packages/ui-default/pages/ranking.page.styl
@@ -4,8 +4,8 @@
     position: relative
 
   .col--user
-    width: rem(200px)
-    text-align: center
+    width: rem(250px)
+    text-align: left
 
   .col--rp
     width: rem(80px)
