--- a/packages/ui-default/templates/components/user.html
+++ b/packages/ui-default/templates/components/user.html
@@ -1,39 +1,49 @@
-{% macro render_inline(udoc, avatar=true, badge=true, modbadge=true) %}
-{% if udoc %}
-<span class="user-profile-link">
-  {% if avatar %}
-    <img class="small user-profile-avatar v-center" src="{{ avatarUrl(udoc.avatar|default('')) }}" width="20" height="20">
-  {% endif %}
-  <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
-    {% if udoc.displayName and udoc.displayName != udoc.uname %}
-      {{ udoc.displayName }} ({{ udoc.uname }})
-    {% else %}
-      {{ udoc.uname }}
-    {% endif %}
-  </a>
-  {% if badge %}
-    {% set level = udoc.level|default(0) %}
-    <a class="user-profile-badge v-center badge--lv{{ level }}" href="{{ url('user_detail', uid=udoc._id) }}" data-tooltip="LV {{ level }}: Top {{ model.builtin.LEVELS[level]|default('N/A') }}%">LV {{ level }}</a>
-    {% if modbadge %}
-      {% if udoc.hasPriv(PRIV.PRIV_MOD_BADGE) %}
-        <span class="user-profile-badge v-center badge--su" data-tooltip="{{ _('SuperUser') }}">SU</span>
-      {% elif udoc.hasPerm(perm.PERM_MOD_BADGE) %}
-        <span class="user-profile-badge v-center badge--mod" data-tooltip="{{ _('Moderator') }}">MOD</span>
+{% macro render_inline(udoc, avatar = true, badge = true, modbadge = true) %}
+  {% if udoc %}
+    <span class="user-profile-link">
+      {% if avatar %}
+        <img class="small user-profile-avatar v-center" src="{{ avatarUrl(udoc.avatar|default('')) }}" width="20" height="20">
       {% endif %}
-    {% endif %}
+      <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
+        {% if handler
+          .user
+          .hasPriv(PRIV.PRIV_USER_PROFILE)and udoc
+          .stuid %}
+          <span class="text-badge">{{ udoc.class }}</span>
+          <span>{{ udoc.name }}</span>
+        {% else %}
+          {% if udoc.displayName %}
+            {{ udoc.displayName }} ({{ udoc.uname }})
+        {% else %}
+            {{ udoc.uname }}
+          {% endif %}
+        {% endif %}
+        {# {% if udoc.displayName and udoc.displayName != udoc.uname %}
+          {{ udoc.displayName }} ({{ udoc.uname }}) #}
+      </a>
+      {% if badge %}
+        {% set level = udoc.level | default(0) %}
+        <a class="user-profile-badge v-center badge--lv{{ level }}" href="{{ url('user_detail', uid=udoc._id) }}" data-tooltip="LV {{ level }}: Top {{ model.builtin.LEVELS[level]|default('N/A') }}%">LV {{ level }}</a>
+        {% if modbadge %}
+          {% if udoc.hasPriv(PRIV.PRIV_MOD_BADGE) %}
+            <span class="user-profile-badge v-center badge--su" data-tooltip="{{ _('SuperUser') }}">SU</span>
+          {% elif udoc.hasPerm(perm.PERM_MOD_BADGE) %}
+            <span class="user-profile-badge v-center badge--mod" data-tooltip="{{ _('Moderator') }}">MOD</span>
+          {% endif %}
+        {% endif %}
+      {% endif %}
+    </span>
+  {% else %}
+    <span class="user-profile-link">
+      {% if avatar %}
+        <img class="small user-profile-avatar v-center" src="{{ static_url('img/avatar.png') }}" width="20" height="20">
+      {% endif %}
+      <a class="user-profile-name" href="#">
+        {{ _('Unknown User') }}
+      </a>
+      {% if badge %}
+        <a class="user-profile-badge v-center badge--lv0" href="#" title="LV0">LV 0</a>
+      {% endif %}
+    </span>
   {% endif %}
-</span>
-{% else %}
-  <span class="user-profile-link">
-    {% if avatar %}
-      <img class="small user-profile-avatar v-center" src="{{ static_url('img/avatar.png') }}" width="20" height="20">
-    {% endif %}
-    <a class="user-profile-name" href="#">
-      {{ _('Unknown User') }}
-    </a>
-    {% if badge %}
-      <a class="user-profile-badge v-center badge--lv0" href="#" title="LV0">LV 0</a>
-    {% endif %}
-  </span>
-{% endif %}
 {% endmacro %}
