--- a/packages/ui-default/templates/partials/contest_sidebar.html
+++ b/packages/ui-default/templates/partials/contest_sidebar.html
@@ -19,7 +19,7 @@
   {% endif %}
   <div>
     <ol class="menu">
-      {% if page_name == 'discussion_node' or page_name == 'discussion_detail' %}
+      {# {% if page_name == 'discussion_node' or page_name == 'discussion_detail' %}
         {% if handler
           .user
           .hasPerm(perm.PERM_CREATE_DISCUSSION) %}
@@ -55,7 +55,7 @@
             {{ _('View Contest') }}
           </a>
         </li>
-      {% endif %}
+      {% endif %} #}
       {% if not(attended or tdoc.attended)and not model
         .contest
         .isDone(tdoc) %}
@@ -140,7 +140,7 @@
           </li>
         {% endif %}
       {% endif %}
-      {% if handler
+      {# {% if handler
         .user
         .hasPerm(perm.PERM_VIEW_DISCUSSION) %}
         <li class="menu__item">
@@ -149,7 +149,7 @@
             {{ _('Discussion') }}
           </a>
         </li>
-      {% endif %}
+      {% endif %} #}
       <li class="menu__item">
         <a class="menu__link" href="{{ url('record_main', query={tid:tdoc.docId}) }}">
           <span class="icon icon-flag"></span>
@@ -214,7 +214,7 @@
           </li>
         {% endif %}
       {% endif %}
-      {% if handler
+      {# {% if handler
         .user
         .hasPerm(perm.PERM_VIEW_DISCUSSION) %}
         <li class="menu__item">
@@ -223,7 +223,7 @@
             {{ _('Discussion') }}
           </a>
         </li>
-      {% endif %}
+      {% endif %} #}
       <li class="menu__item">
         <a class="menu__link" href="{{ url('record_main', query={tid:tdoc.docId}) }}">
           <span class="icon icon-flag"></span>
