--- a/packages/ui-default/templates/record_main_tr.html
+++ b/packages/ui-default/templates/record_main_tr.html
@@ -1,5 +1,6 @@
 {% import "components/record.html" as record with context %}
 {% import "components/problem.html" as problem with context %}
+{% import "components/user.html" as user with context %}
 <tr data-rid="{{ rdoc['_id'] }}">
   {{ record.render_status_td(rdoc) }}
   <td class="col--problem col--problem-name">
@@ -25,7 +26,7 @@
   </td>
   <td class="col--submit-by">
     <a href="{{ url('user_detail', uid=rdoc.uid) }}">
-      {{ user.render_inline(udoc,false,false,false) }}
+      {{ user.render_inline(udoc,badge=false,avatar=false) }}
     </a>
   </td>
   <td class="col--time">
