--- a/packages/ui-default/templates/components/user.html
+++ b/packages/ui-default/templates/components/user.html
@@ -4,32 +4,36 @@
       {% if avatar %}
         <img class="small user-profile-avatar v-center" src="{{ avatarUrl(udoc.avatar|default('')) }}" width="20" height="20">
       {% endif %}
-      <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
-        {% if handler
-          .user
-          .hasPriv(PRIV.PRIV_USER_PROFILE) %}
-          {% if udoc.stuid and udoc.name and udoc.class %}
+      {% if handler
+        .user
+        .hasPriv(PRIV.PRIV_USER_PROFILE) %}
+        {% if udoc.stuid and udoc.name and udoc.class %}
+          <a href="{{ url('student_class', cls=udoc.class) }}">
             <span class="text-badge">{{ udoc.class }}</span>
+          </a>
+          <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
             <span>{{ udoc.name }}</span>
-          {% else %}
-            <span class="text-badge">未完善</span>
+          </a>
+        {% else %}
+          <span class="text-badge">未完善</span>
+          <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
             {% if udoc.displayName %}
               {{ udoc.displayName }}
             {% else %}
               {{ udoc.uname }}
             {% endif %}
-          {% endif %}
-        {% else %}
-          {% if udoc.displayName %}
-            {{ udoc.displayName }} ({{ udoc.uname }})
-            {% else %}
-            {{ udoc.uname }}
-          {% endif %}
+          </a>
         {% endif %}
-        {# {% if udoc.displayName and udoc.displayName != udoc.uname %}
+      {% else %}
+        {% if udoc.displayName %}
+          {{ udoc.displayName }} ({{ udoc.uname }})
+            {% else %}
+          {{ udoc.uname }}
+        {% endif %}
+      {% endif %}
+      {# {% if udoc.displayName and udoc.displayName != udoc.uname %}
           {{ udoc.displayName }} ({{ udoc.uname }})
         {% endif %} #}
-      </a>
       {% if badge %}
         {% set level = udoc.level | default(0) %}
         <a class="user-profile-badge v-center badge--lv{{ level }}" href="{{ url('user_detail', uid=udoc._id) }}" data-tooltip="LV {{ level }}: Top {{ model.builtin.LEVELS[level]|default('N/A') }}%">LV {{ level }}</a>
