--- a/packages/ui-default/templates/user_stu_class.html
+++ b/packages/ui-default/templates/user_stu_class.html
@@ -7,37 +7,49 @@
                     <h1 class="section__title">班级：{{ className }}</h1>
                 </div>
                 <div class="section__body no-padding">
-                    <div data-fragment-id="ranking">
+                    <div>
                         {% if not udocs.length %}
                             {{ nothing.render('该班级还没有人加入哦！') }}
                         {% else %}
                             <table class="data-table">
                                 <colgroup>
                                     <col class="col--rank">
+                                    <col class="col--stuid">
                                     <col class="col--user">
+                                    <col class="col--gender">
                                     <col class="col--rp">
+                                    <col class="col--ac">
+                                    <col class="col--lastlogin">
                                     <col class="col--bio">
                                 </colgroup>
                                 <thead>
                                     <tr>
                                         <th class="col--rank">{{ _('Rank') }}</th>
+                                        <th class="col--stuid">{{ _('Stu_ID') }}</th>
                                         <th class="col--user">{{ _('Username') }}</th>
+                                        <th class="col--gender">{{ _('Gender') }}</th>
                                         <th class="col--rp">{{ _('RP') }}</th>
+                                        <th class="col--ac">AC数量</th>
+                                        <th class="col--lastlogin">{{ _('last login at') }}</th>
                                         <th class="col--bio">{{ _('Bio') }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {%- for udoc in udocs -%}
                                         <tr>
-                                            <td class="col--rank">{{ (page - 1) * 100 + loop.index }}</td>
+                                            <td class="col--rank">{{ loop.index }}</td>
+                                            <td class="col--stuid">{{ udoc['stuid'] }}</td>
                                             <td class="col--user">{{ user.render_inline(udoc) }}</td>
+                                            <td class="col--gender">{{ model.builtin.USER_GENDER_ICONS[udoc.gender] }}</td>
                                             <td class="col--rp">{{ udoc.rp|default(1500)|round(0) }}</td>
+                                            <td class="col--ac">{{ udoc['nAccept'] }}</td>
+                                            <td class="col--lastlogin">{{ datetimeSpan(udoc['loginat'])|safe }}</td>
                                             <td class="col--bio">{{ udoc.bio|default('')|truncate(64, true)|markdownInline|safe }}</td>
                                         </tr>
                                     {%- endfor -%}
                                 </tbody>
                             </table>
-                            {{ paginator.render(page, upcount) }}
+                            {# {{ paginator.render(page, upcount) }} #}
                         {% endif %}
                     </div>
                 </div>
