--- a/packages/ui-default/templates/user_stu_class.html
+++ b/packages/ui-default/templates/user_stu_class.html
@@ -14,7 +14,11 @@
                             <table class="data-table">
                                 <colgroup>
                                     <col class="col--rank">
-                                    <col class="col--stuid">
+                                    {% if handler
+                                        .user
+                                        .hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                                        <col class="col--stuid">
+                                    {% endif %}
                                     <col class="col--user">
                                     <col class="col--gender">
                                     <col class="col--rp">
@@ -25,7 +29,11 @@
                                 <thead>
                                     <tr>
                                         <th class="col--rank">{{ _('Rank') }}</th>
-                                        <th class="col--stuid">{{ _('Stu_ID') }}</th>
+                                        {% if handler
+                                            .user
+                                            .hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                                            <th class="col--stuid">{{ _('Stu_ID') }}</th>
+                                        {% endif %}
                                         <th class="col--user">{{ _('Username') }}</th>
                                         <th class="col--gender">{{ _('Gender') }}</th>
                                         <th class="col--rp">{{ _('RP') }}</th>
@@ -38,8 +46,12 @@
                                     {%- for udoc in udocs -%}
                                         <tr>
                                             <td class="col--rank">{{ loop.index }}</td>
-                                            <td class="col--stuid">{{ udoc['stuid'] }}</td>
-                                            <td class="col--user">{{ user.render_inline(udoc) }}</td>
+                                            {% if handler
+                                                .user
+                                                .hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                                                <td class="col--stuid">{{ udoc['stuid'] }}</td>
+                                            {% endif %}
+                                            <td class="col--user">{{ user.render_inline(udoc,class=false) }}</td>
                                             <td class="col--gender">{{ model.builtin.USER_GENDER_ICONS[udoc.gender] }}</td>
                                             <td class="col--rp">{{ udoc.rp|default(1500)|round(0) }}</td>
                                             <td class="col--ac">{{ udoc['nAccept'] }}</td>
@@ -49,7 +61,6 @@
                                     {%- endfor -%}
                                 </tbody>
                             </table>
-                            {# {{ paginator.render(page, upcount) }} #}
                         {% endif %}
                     </div>
                 </div>
