--- a/packages/ui-default/templates/partials/footer.html
+++ b/packages/ui-default/templates/partials/footer.html
@@ -19,6 +19,9 @@
                   <li class="footer__category__item">
                     <a href="{{ url('status') }}">{{ _('Service Status') }}</a>
                   </li>
+                  <li class="footer__category__item">
+                    <a href="http://211.69.154.237:19999/">服务器监控</a>
+                  </li>
                 </ul>
               </div>
             </div>
