修复一些前端bug 改善动画

--- a/packages/ui-default/templates/partials/footer.html
+++ b/packages/ui-default/templates/partials/footer.html
@@ -20,7 +20,7 @@
                     <a href="{{ url('status') }}">{{ _('Service Status') }}</a>
                   </li>
                   <li class="footer__category__item">
-                    <a href="http://211.69.154.237:19999/">服务器监控</a>
+                    <a href="https://monitor.kejimofang.com/" target="__blank">服务器监控</a>
                   </li>
                 </ul>
               </div>
