--- a/packages/ui-default/misc/section.styl
+++ b/packages/ui-default/misc/section.styl
@@ -24,7 +24,7 @@
 
 .hasjs .section
   +above(rupture.mobile-cutoff)
-    transform: translateY(rem(100px)) scale(1.2)
+    transform: translateY(rem(100px)) scale(.8)
     opacity: 0
 
     &.visible
