--- a/packages/ui-default/templates/manage_base.html
+++ b/packages/ui-default/templates/manage_base.html
@@ -16,6 +16,8 @@
             {{ sidemenu.render_item(null, 'manage_script') }}
             {{ sidemenu.render_item(null, 'manage_user_import') }}
             {{ sidemenu.render_item(null, 'manage_setting') }}
+            {{ sidemenu.render_item(null, 'manage_student_import') }}
+            {{ sidemenu.render_item(null, 'manage_teacher_register') }}
           </ol>
         </li>
       </ol>
