修改Logo为文字

--- a/packages/ui-default/templates/partials/nav.html
+++ b/packages/ui-default/templates/partials/nav.html
@@ -11,7 +11,10 @@
     <div class="columns clearfix">
       <ol class="nav__list nav__list--main clearfix">
         <li class="nav__list-item">
-          <a href="/" class="nav__logo" style="background-size: 100% 100%;">&nbsp;</a>
+          <!-- <a href="/" class="nav__logo" style="background-size: 100% 100%;">&nbsp;</a> -->
+          <h2 
+          style="height: 44px; line-height: 44px;font-weight: bolder; margin: 0;padding:0 10px 0 10px;"
+          >HGNUOJ</h2>
         </li>
         {%- for item in ui.nodes.nav -%}
           {% if item.checker(handler) %}
