更改注册提示

--- a/packages/ui-default/templates/user_register_with_code.html
+++ b/packages/ui-default/templates/user_register_with_code.html
@@ -24,7 +24,7 @@
       </div>
       <div>
         <label class="inverse material textbox">
-          {{ _('Stu_ClassName') }}
+          {{ _('Reg_Stu_ClassName') }}
           <input name="stuclass" type="text" autofocus>
         </label>
       </div>
