--- a/packages/ui-default/templates/about.html
+++ b/packages/ui-default/templates/about.html
@@ -6,10 +6,10 @@
     <h1 class="section__title" id="about" data-heading>{{ _('About {0}').format(name) }}</h1>
   </div>
   <div class="section__body typo">
-    <p><a href="https://hydro.js.org">{{ name }}</a> 致力于为用户提供安全、完善、开放的在线评测及题目交流等服务。</p>
+    <p>请查看<a href="/wiki/help">帮助</a>。</p>
   </div>
 </div>
-<div class="section" data-heading-extract-to="#menu-item-wiki_about">
+<!-- <div class="section" data-heading-extract-to="#menu-item-wiki_about">
   <div class="section__header">
     <h1 class="section__title" id="contact" data-heading>{{ _('Contact Us') }}</h1>
   </div>
@@ -119,5 +119,5 @@
     </blockquote>
     <p>对于违反《版规》的，我们将进行警告并删除相关内容、临时冻结用户、永久冻结用户等操作。</p>
   </div>
-</div>
+</div> -->
 {% endblock %}
