--- a/packages/ui-default/templates/manage_stu_import.html
+++ b/packages/ui-default/templates/manage_stu_import.html
@@ -3,7 +3,7 @@
 {% block manage_content %}
 <div class="section">
   <div class="section__header">
-    <h1 class="section__title" data-heading>{{ _('Import User') }}</h1>
+    <h1 class="section__title" data-heading>学生导入</h1>
   </div>
   <div class="section__body">
     {{ noscript_note.render() }}
