--- a/packages/ui-default/templates/manage_teacher_register.html
+++ b/packages/ui-default/templates/manage_teacher_register.html
@@ -3,25 +3,17 @@
 {% block manage_content %}
 <div class="section">
   <div class="section__header">
-    <h1 class="section__title" data-heading>{{ _('Messages') }}</h1>
-  </div>
-  <div class="section__body typo" id="messages"></div>
-</div>
-<div class="section">
-  <div class="section__header">
-    <h1 class="section__title" data-heading>{{ _('Information') }}</h1>
-    <div class="section__tools">
-      <form method="post">
-        <input type="hidden" name="operation" value="restart">
-        <button type="submit" class="primary rounded button"><span class="icon icon-refresh"></span> {{ _('Restart') }}</button>
-      </form>
-    </div>
+    <h1 class="section__title" data-heading>教师注册</h1>
   </div>
   <div class="section__body typo">
     <dl class="large horizontal">
-    <dt>{{ _('Avatar') }}</dt><dd><img src="{{ avatarUrl(domain.avatar) }}" width="32" height="32"></dd>
-    <dt>{{ _('Name') }}</dt><dd>{{ domain.name }}</dd>
+    <dt>教师姓名：</dt><dd><input type="text" name="teacherName"></dd>
+    <dt>教师工号：</dt><dd><input type="text" name="teacherID"></dd>
+    <dt>教师邮箱：</dt><dd><input type="email" name="email"></dd>
+    <dt>教师用户名：</dt><dd><input type="text" name="username"></dd>
+    <dt>教师密码：</dt><dd><input type="password" name="password"></dd>
     </dl>
+    <button name="submit" class="primary rounded button">注册</button>
   </div>
 </div>
 {% endblock %}
