--- a/packages/ui-default/templates/partials/footer.html
+++ b/packages/ui-default/templates/partials/footer.html
@@ -43,7 +43,7 @@
                 </ul>
               </div>
             </div> #}
-            {# <div class="medium-3 large-2 columns footer__category expandable end">
+            <div class="medium-3 large-2 columns footer__category expandable end">
               <h1>
                 {{ _('Support') }}
                 <span class="expand-icon">
@@ -52,6 +52,7 @@
               </h1>
               <div class="footer__category__expander">
                 <ul class="footer__category__list">
+                  {#
                   <li class="footer__category__item">
                     <a href="{{ url('wiki_help') }}">{{ _('Help') }}</a>
                   </li>
@@ -59,9 +60,13 @@
                   <li class="footer__category__item">
                     <a href="{{ url('wiki_about', anchor='contact') }}">{{ _('QQ Group') }}</a>
                   </li>
+                  #}
+                  <li class="footer__category__item">
+                    <a href="{{ url('wiki_help')}}">{{ _('Help') }}</a>
+                  </li>
                 </ul>
               </div>
-            </div> #}
+            </div>
           </div>
         {% endif %}
         <div class="footer__extra-link clearfix">
