--- a/packages/ui-default/templates/components/user.html
+++ b/packages/ui-default/templates/components/user.html
@@ -10,7 +10,7 @@
         .hasPriv(PRIV.PRIV_USER_PROFILE) %}
       #}
         {% if udoc.name and udoc.class %}
-          <a href="{{ url('student_class', cls=udoc.class) }}">
+          <a href="{{ url('student_class', cls=udoc.class) }}" data-tooltip="专业班级：{{ udoc.class }}">
             <span class="text-badge">{{ udoc.class }}</span>
           </a>
           <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
@@ -18,7 +18,7 @@
           </a>
         {% else %}
           {% if not udoc.class %}
-            <span class="text-badge">未完善</span>
+            <span class="text-badge" data-tooltip="该用户未填写班级信息">未完善</span>
           {% endif %}
           <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
             {% if udoc.displayName %}
