--- a/packages/ui-default/templates/partials/homepage/ranking.html
+++ b/packages/ui-default/templates/partials/homepage/ranking.html
@@ -17,7 +17,9 @@
               <th class="col--rank">{{ _('Rank') }}</th>
               <th class="col--user">{{ _('Username') }}</th>
               <th class="col--rp">{{ _('RP') }}</th>
+              {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
               <th class="col--bio">{{ _('Bio') }}</th>
+              {% endif %}
             </tr>
           </thead>
           <tbody>
@@ -27,7 +29,9 @@
                 <td class="col--rank">{{ loop.index }}</td>
                 <td class="col--user">{{ user.render_inline(udoc) }}</td>
                 <td class="col--rp">{{ udoc.rp|default(1500)|round(0) }}</td>
+                {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
                 <td class="col--bio">{{ udoc.bio|default('')|truncate(64, true)|markdownInline|safe }}</td>
+                {% endif %}
               </tr>
             {%- endfor -%}
           </tbody>
