修改帮助页面

--- a/packages/ui-default/templates/wiki_help.html
+++ b/packages/ui-default/templates/wiki_help.html
@@ -9,12 +9,12 @@
     <p><b>请将鼠标放置右上角用户名处，点击“我的域”，再点击“创建域”，创建您的域。</b></p>
     <blockquote class="note">
       <ol>
-      <li>域的ID是固定的，创建域后无法进行修改。ID是进入您的域的唯一凭证，它将呈现在您的域的url上。</li>
+      <li><b>域的ID是固定的</b>，创建域后无法进行修改。ID是进入您的域的唯一凭证，它将呈现在您的域的url上。</li>
       <li>域的名称是可以随意更改的，在创建域后如果想要修改名称，请点击<b>管理域-编辑域资料</b>进行修改。</li>
       <li>您可以通过<b>管理域-管理权限</b>来修改用户在您的域内所拥有的的权限，默认与主域的权限相同。</li>
       <li>默认域为 system（即主域），用户直接访问 {{ name }} 域名就会访问此域，点击<b> HGNUOJ Logo </b>会从任意域跳转回 system 域。</li>
       <li>每个域的题库、讨论、训练以及比赛是独立且互不影响的。</li>
-      <li>在创建训练、作业、比赛时，可以通过<b>system:数字题号</b>来使用主域题库中的题。</li>
+      <li>在创建训练、作业、比赛时，可以通过 <code>system:数字题号</code> 来使用主域题库中的题。</li>
       </ol>
     </blockquote>
     <p>为防止资源乱用，仅限老师和超级管理员可以创建自己的域。比如，老师可以为课程创建一个域，然后把题目和学生加入到此域中。</p>
