修改创建题目时题面的提示语

--- a/packages/ui-default/templates/components/md_hint.html
+++ b/packages/ui-default/templates/components/md_hint.html
@@ -1,5 +1,6 @@
 <div class="section side">
   <div class="section__body typo">
+    <h2>题面帮助</h2>
     <dl>
       <dt>{{ _('Inline codes') }}</dt>
       <dd><pre>`std::cout()`</pre></dd>
@@ -28,10 +29,7 @@ return 0;
       <dt>{{ _('Videos') }}</dt>
       <dd><pre>@[video](https://.../file.mp4)</pre></dd>
     </dl>
-    <h2>{{ _('Learn More') }}</h2>
-    <ul>
-      <li><a href="http://commonmark.org/help/" target="_blank"><span class="icon icon-link--external"></span> {{ _('CommonMark Syntax') }}</a></li>
-      <li><a href="http://www.onemathematicalcat.org/MathJaxDocumentation/TeXSyntax.htm" target="_blank"><span class="icon icon-link--external"></span> {{ _('LaTeX Expressions') }}</a></li>
-    </ul>
+    <!-- <h2>{{ _('Learn More') }}</h2> -->
+
   </div>
 </div>
