完善课程 添加是否公开课程选项

--- a/packages/ui-default/templates/domain_create.html
+++ b/packages/ui-default/templates/domain_create.html
@@ -34,10 +34,14 @@
                 name:'bulletin',
                 markdown:true,
                 required:true
-            }) }}
-            {{ form.form_text({
+            }) }}            
+            <!-- {{ form.form_text({
                 label:'Avatar',
                 name:'avatar'
+            }) }} -->
+            {{ form.checkbox({
+                label:'公开到课程页面',
+                name:'publicToCourses'
             }) }}
           <div class="row"><div class="columns">
             <input type="hidden" name="csrfToken" value="{{ handler.csrfToken }}">
