--- a/packages/ui-default/templates/manage_teacher_register.html
+++ b/packages/ui-default/templates/manage_teacher_register.html
@@ -5,15 +5,53 @@
   <div class="section__header">
     <h1 class="section__title" data-heading>教师注册</h1>
   </div>
-  <div class="section__body typo">
-    <dl class="large horizontal">
-    <dt>教师姓名：</dt><dd><input type="text" name="teacherName"></dd>
-    <dt>教师工号：</dt><dd><input type="text" name="teacherID"></dd>
-    <dt>教师邮箱：</dt><dd><input type="email" name="email"></dd>
-    <dt>教师用户名：</dt><dd><input type="text" name="username"></dd>
-    <dt>教师密码：</dt><dd><input type="password" name="password"></dd>
-    </dl>
-    <button name="submit" class="primary rounded button">注册</button>
+  <div class="section__body">
+    {{ noscript_note.render() }}
+    <p name="messages"></p>
+    <form method="post">
+    {{ form.form_text({
+      columns:4,
+      label:'教师姓名',
+      name:'teacherName',
+      value:'',
+      autofocus:true,
+      required:true
+    }) }}
+    {{ form.form_text({
+      columns:4,
+      label:'教师工号',
+      name:'teacherID',
+      value:'',
+      autofocus:true,
+      required:true
+    }) }}
+    {{ form.form_text({
+      columns:4,
+      label:'教师邮箱',
+      name:'email',
+      value:'',
+      autofocus:true,
+      required:true
+    }) }}
+    {{ form.form_text({
+      columns:4,
+      label:'教师用户名',
+      name:'username',
+      value:'',
+      autofocus:true,
+      required:true
+    }) }}
+    {{ form.form_text({
+      columns:4,
+      type:'password',
+      label:'教师密码',
+      name:'password',
+      value:'',
+      autofocus:true,
+      required:true
+    }) }}
+    <button type="submit" class="primary rounded button">注册</button>
+  </form>
   </div>
 </div>
 {% endblock %}
