将班级页面的上次登录时间改为上次活动时间

--- a/packages/ui-default/templates/stu_class_students.html
+++ b/packages/ui-default/templates/stu_class_students.html
@@ -64,7 +64,11 @@
                                             <td class="col--gender">{{ model.builtin.USER_GENDER_ICONS[udoc.gender] }}</td>
                                             <td class="col--rp">{{ udoc.rp|default(1500)|round(0) }}</td>
                                             <td class="col--ac">{{ udoc['nAccept'] }}</td>
-                                            <td class="col--lastlogin">{{ datetimeSpan(udoc['loginat'])|safe }}</td>
+                                            {% if sdocs[udoc['_id']] %}
+                                            <td class="col--lastlogin">{{ datetimeSpan(sdocs[udoc['_id']])|safe }}</td>
+                                            {% else %}
+                                            <td class="col--lastlogin">离线</td>
+                                            {% endif %}
                                             <td class="col--bio">{{ udoc.bio|default('')|truncate(64, true)|markdownInline|safe }}</td>
                                         </tr>
                                     {%- endfor -%}
