在特定域中显示当前所在域名称

--- a/packages/ui-default/templates/main.html
+++ b/packages/ui-default/templates/main.html
@@ -43,6 +43,14 @@
       {% endfor %}
     </div>
     <div class="large-3 columns">
+      {% if domain['_id'] !== 'system' %}
+        <div class="section side">
+          <div class="section__header">
+            <h1 class="section__title"><strong>当前域：{{ domain['name'] }}</strong></h1>
+            <div class="section__body"></div>
+          </div>
+        </div>
+      {% endif %}
       <div class="section side nojs--hide">
         <div class="section__header">
           <h1 class="section__title">{{ _('Hitokoto') }}</h1>
