控制面板添加修改密码功能

--- a/packages/ui-default/templates/manage_base.html
+++ b/packages/ui-default/templates/manage_base.html
@@ -18,6 +18,7 @@
             {{ sidemenu.render_item(null, 'manage_setting') }}
             {{ sidemenu.render_item(null, 'manage_student_import') }}
             {{ sidemenu.render_item(null, 'manage_teacher_register') }}
+            {{ sidemenu.render_item(null, 'manage_user_changepassword') }}
           </ol>
         </li>
       </ol>
