更改页面排版

--- a/packages/ui-default/templates/manage_stu_import.html
+++ b/packages/ui-default/templates/manage_stu_import.html
@@ -6,11 +6,15 @@
     <h1 class="section__title" data-heading>学生导入</h1>
   </div>
   <div class="section__body">
+    <p>输入学生信息，格式例如：123@abc.com,abc,123456,张三,软工1901,2019310000000，信息用英文逗号隔开，每个学生占一行</p>
+  </div>
+</div>
+<div class="section">
+  <div class="section__body">
     {{ noscript_note.render() }}
     <p name="messages"></p>
     {{ form.form_textarea({
         columns:null,
-        label:'输入学生信息，格式例如：123@abc.com,abc,123456,张三,软工1901,2019310000000，信息用英文逗号隔开，每个学生占一行',
         name:'students'
         }) }}
     <div class="row"><div class="column">
