--- a/packages/ui-default/templates/manage_teacher_register.html
+++ b/packages/ui-default/templates/manage_teacher_register.html
@@ -6,6 +6,11 @@
     <h1 class="section__title" data-heading>教师注册</h1>
   </div>
   <div class="section__body">
+    <p>为老师注册账户</p>
+  </div>
+</div>
+<div class="section">
+  <div class="section__body">
     {{ noscript_note.render() }}
     <p name="messages"></p>
     <form method="post">
